--- a/ordering_service/src/main/resources/application.yml
+++ b/ordering_service/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
     name: ordering-service
   zipkin:
     baseUrl: http://localhost:9411
+#        baseUrl: http://localhost:10483
   data:
     mongodb:
       database: test
