--- a/cooking_service/build.gradle
+++ b/cooking_service/build.gradle
@@ -18,7 +18,9 @@ repositories {
 dependencies {
     implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.10'
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
-//    compileOnly group: 'javax.servlet', name: 'servlet-api', version: '2.5'
+    implementation group: 'io.opentracing.contrib', name: 'opentracing-spring-web', version: '4.1.0'
+    implementation group: 'io.jaegertracing', name: 'jaeger-client', version: '1.6.0'
+    implementation group: 'io.opentracing', name: 'opentracing-api', version: '0.33.0'
 
 }
 
