--- a/cooking_service/build.gradle
+++ b/cooking_service/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation group: 'io.opentracing.contrib', name: 'opentracing-spring-web', version: '4.1.0'
     implementation group: 'io.jaegertracing', name: 'jaeger-client', version: '1.6.0'
     implementation group: 'io.opentracing', name: 'opentracing-api', version: '0.33.0'
+    implementation group: 'io.opentracing.contrib', name: 'opentracing-apache-httpclient', version: '0.3.3'
+
 
 }
 
