h2 db has been added to delivery service

--- a/delivery_service/pom.xml
+++ b/delivery_service/pom.xml
@@ -56,8 +56,21 @@
       <artifactId>brave-opentracing</artifactId>
       <version>1.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.5.7.Final</version>
+    </dependency><dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <version>1.4.200</version>
+  </dependency>
+    <dependency>
+      <groupId>io.opentracing.contrib</groupId>
+      <artifactId>opentracing-jdbc</artifactId>
+      <version>0.2.15</version>
+    </dependency>
   </dependencies>
-
 
   <build>
     <finalName>delivery-service</finalName>
