--- a/delivery_service/src/main/webapp/WEB-INF/web.xml
+++ b/delivery_service/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,12 @@
-<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+<?xml version="1.0" encoding="UTF-8" ?>
+<web-app
+        id="WebApp_ID" version="2.5">
+
     <display-name>delivery-service</display-name>
 
     <servlet>
         <servlet-name>DeliveryController</servlet-name>
-        <servlet-class>com.godel.presenation.tracing.controller.DeliveryController</servlet-class>
+        <servlet-class>com.godel.presentation.tracing.controller.DeliveryController</servlet-class>
     </servlet>
 
     <servlet-mapping>
@@ -13,9 +14,20 @@
         <url-pattern>/delivery</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>UserController</servlet-name>
+        <servlet-class>com.godel.presentation.tracing.controller.UserController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>UserController</servlet-name>
+        <url-pattern>/users/*</url-pattern>
+    </servlet-mapping>
+
+
     <filter>
         <filter-name>tracingFilter</filter-name>
-        <filter-class>com.godel.presenation.tracing.config.DelegatingTracingFilter</filter-class>
+        <filter-class>com.godel.presentation.tracing.config.DelegatingTracingFilter</filter-class>
     </filter>
 
     <filter-mapping>
