delivery service has been modified

--- a/delivery_service/src/main/webapp/WEB-INF/web.xml
+++ b/delivery_service/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,17 @@
         <url-pattern>/users/*</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>HelloController</servlet-name>
+        <servlet-class>com.godel.presentation.tracing.controller.HelloController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>HelloController</servlet-name>
+        <url-pattern>/hello/*</url-pattern>
+    </servlet-mapping>
+
+
 
     <filter>
         <filter-name>tracingFilter</filter-name>
