--- a/user_service/build.gradle
+++ b/user_service/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'java'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version '2.5.5'
+    id 'org.flywaydb.flyway' version '6.5.1'
 }
 
-apply plugin: 'java'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -13,21 +15,40 @@ repositories {
     mavenCentral()
 }
 
+def springCloudVersion = '3.0.4'
+def h2Version = '1.4.200'
+def braveVersion = '1.0.0'
+def opentracingJdbcVersion = '0.2.15'
+def opentracingJdbcStarterVersion = '0.5.9'
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
+compileJava {
+    options.annotationProcessorPath = configurations.annotationProcessor
+}
+
+flyway {
+    locations = ['classpath:db/migration']
+}
+
+flywayMigrate.dependsOn classes
+
 dependencies {
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.5.5'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.5'
-    implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth', version: '3.0.4'
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-sleuth-zipkin', version: '3.0.4'
-    implementation group: 'io.opentracing.brave', name: 'brave-opentracing', version: '1.0.0'
-    implementation group: 'io.opentracing.contrib', name: 'opentracing-jdbc', version: '0.2.15'
-    implementation group: 'io.opentracing.contrib', name: 'opentracing-spring-cloud-jdbc-starter', version: '0.5.9'
-
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.4'
-
-
-
-
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation "com.h2database:h2:${h2Version}"
+    implementation 'org.flywaydb:flyway-core'
+    implementation "org.springframework.cloud:spring-cloud-starter-sleuth:${springCloudVersion}"
+    implementation "org.springframework.cloud:spring-cloud-sleuth-zipkin:${springCloudVersion}"
+    implementation "org.springframework.cloud:spring-cloud-starter-openfeign:${springCloudVersion}"
+    implementation "io.opentracing.brave:brave-opentracing:${braveVersion}"
+    implementation "io.opentracing.contrib:opentracing-jdbc:${opentracingJdbcVersion}"
+    implementation "io.opentracing.contrib:opentracing-spring-cloud-jdbc-starter:${opentracingJdbcStarterVersion}"
+    annotationProcessor 'org.projectlombok:lombok'
 }
 
 test {
